<resources>
    <string name="app_name">SailApp</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">My profile</string>
    <string name="sail_now">Sail now</string>
    <string name="my_stats">My stats</string>
    <string name="log_out">Log out</string>
    <string name="login_screen_banner">Login screen banner</string>
    <string name="sailapp_banner">SailApp banner</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="reply_password">Reply password</string>
    <string name="i_accept_the_license_agreement">I accept the license agreement</string>
    <string name="phone_number">Phone number</string>
    <string name="date">Date</string>
    <string name="start_time">Start time</string>
    <string name="how_long">How long?</string>
    <string name="equipment">Equipment</string>
    <string name="confirm">Confirm</string>
    <string name="call_the_centre">Call the centre</string>
    <string name="show_map">Show map</string>
    <string name="rental_date">Date:</string>
    <string name="rental_start_time">Start time:</string>
    <string name="rental_length">Rental length:</string>
    <string name="rental_location">Location:</string>
    <string name="profile_fragment">Profile fragment - your rentals:</string>
    <string name="image_of_the_centre">Image of the centre</string>
    <string name="image_of_the_renting_centre">Image of the renting centre</string>
    <string name="search_hint">Search centre by name</string>
    <string name="filter_results">Filter results</string>
    <string name="search">Search</string>
    <string name="ok">OK</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="select_filters">Select filters</string>
    <string name="five_stars">5 stars</string>
    <string name="four_stars">4 stars</string>
    <string name="three_stars">3 stars</string>
    <string name="minimal_rating">Minimal rating</string>
    <string name="no_matter">No matter</string>
    <string name="maximal_distance">Maximal distance</string>
    <string name="zero">0</string>
    <string name="sort_by_distance">Sort by distance</string>
    <string name="sort_by_rating">Sort by rating</string>
    <string name="calendar">Calendar</string>
    <string name="clock">Clock</string>
    <string name="arrow_down">Arrow down</string>
    <string name="weather_icon">Weather icon</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="arrow_up">Arrow up</string>
    <string name="cancel">Cancel</string>
    <string name="ahoy">Ahoy,</string>
    <string name="cancel_reservation">Sure to cancel reservation?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="upcoming_events">Upcoming events</string>
    <string name="treasure_and_map">Treasure and map</string>
    <string name="no_rentals_info">No planned events. Want to sail a bit?</string>
    <string name="stats_fragment">Stats fragment</string>
    <string name="gear">Gear:</string>
    <string name="rental_duration">Rental duration:</string>
    <string name="downloading">Loading…</string>
    <string name="my_localization_button">My localization button</string>
    <string name="register_error">Registration error: Account already exists.</string>
    <string name="end_time">End time:</string>
    <string name="years_rentals">Your year\'s rentals:</string>
    <string name="years_favourite_centres">Your favourite centres:</string>
    <string name="total_number_of_rentals">Total number of rentals:</string>
    <string name="rentals_history">Rentals\' history:</string>
    <string name="anchor">anchor</string>
    <string name="seems_like_no_sailing">Seems like no sailing this year. Want to sail a bit?</string>
    <string name="change">Change</string>
    <string name="settings">Settings</string>
    <string name="your_account">Your account</string>
    <string name="save_changes">Save changes</string>
    <string name="change_data">Change data</string>
    <string name="sort_by_distance_ascending">Sort by distance ascending</string>
    <string name="sort_by_distance_descending">Sort by distance descending</string>
    <string name="status_accepted">Status: Accepted</string>
    <string name="status_denied">Status: Denied</string>
    <string name="status_waiting">Status: Waiting for confirmation</string>
    <string name="quantity">Quantity</string>
    <string name="lightness_level">Lightness Level</string>
    <string name="no_light_sensor">No light sensor</string>
    <string name="cruise_mode">Cruise mode</string>
    <string name="acceleration">Acceleration</string>
    <string name="x_axis">X axis:</string>
    <string name="y_axis">Y axis</string>
    <string name="z_axis">Z axis:</string>
    <string name="no_camera">Camera not found</string>
    <string name="no_camera_permission">No camera permission</string>
    <string name="no_storage_permission">No storage permission</string>
    <string name="no_telephony_permission">No telephony permission</string>
    <string name="no_sms_permission">No SMS permission</string>
    <string name="photo_done">Photo done</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="telephony">Telephony</string>
    <string name="message">Message</string>
    <string name="cancellation_message">Sorry, but I must cancel my reservation.</string>
    <string name="incorrect_number">Incorrect number</string>
    <string name="no_rental_selected">No rental selected</string>
</resources>
