<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".ui.main.dialogs.FilterDialogFragment"
              android:padding="10dp"
>

    <!-- TODO: Update blank fragment layout -->

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minimal_rating"
            android:gravity="center_horizontal"
            android:textSize="18sp"/>

    <RadioGroup
            android:id="@+id/radio_group_stars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
    >
        <RadioButton android:id="@+id/radio_5_stars"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/five_stars"
                     android:layout_weight="1"
        >

        </RadioButton>
        <RadioButton android:id="@+id/radio_4_stars"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/four_stars"
                     android:layout_weight="1"
        />

        <RadioButton android:id="@+id/radio_3_stars"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/three_stars"
                     android:layout_weight="1"
        />

        <RadioButton android:id="@+id/radio_no_matter"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/no_matter"
                     android:layout_weight="1"
                     android:checked="true"
        />
    </RadioGroup>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maximal_distance"
            android:gravity="center_horizontal"
            android:textSize="18sp"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
        <TextView
                android:id="@+id/minimal_distance_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:layout_weight="3"
        />

        <TextView
                android:id="@+id/actual_distance_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:layout_weight="1"
        />

        <TextView
                android:id="@+id/maximal_distance_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:layout_weight="3"
        />
    </LinearLayout>

    <SeekBar
            android:id="@+id/seekBar_distance"
            android:progress="100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
    />

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <Button android:id="@+id/button_cancel" android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_weight="1" android:text="@string/cancel"  android:background="@color/colorPrimary" android:layout_margin="2dp"
        />
        <Button android:id="@+id/button_ok" android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_weight="1" android:text="@string/ok" android:background="@color/colorPrimary" android:layout_margin="2dp"/>


    </LinearLayout>

</LinearLayout>