<?xml version="1.0" encoding="utf-8"?>
<!-- HINT: Fragment layout crashes when it uses constraint layout as the main layout (needs to be wrapped into frame layout- why? -->
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.login.LoginFragment"
            android:orientation="vertical"
        android:padding="10dp"
>

        <!-- TODO consider adding autofillHints -->
        <ImageView
                android:layout_width="match_parent"
                android:contentDescription="@string/login_screen_banner"
                android:layout_height="121dp"
                app:srcCompat="@drawable/banner"
                android:id="@+id/imageView"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="120dp"
                android:layout_marginBottom="40dp"
        />

        <EditText
                android:id="@+id/editText_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_margin="8dp"
        />

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:ems="10"
                android:id="@+id/editText_password"
                android:textColor="@color/colorPrimary"
                android:layout_margin="10dp"
        />

        <Button
                android:text="@string/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_login"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@color/colorPrimary"
        />

        <Button
                android:text="@string/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_register"
                android:layout_margin="8dp"
                android:background="@color/colorPrimaryDark"
        />



</LinearLayout>



