<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".ui.main.dialogs.SortDialogFragment"
              android:padding="10dp"
>

    <!-- TODO: Update blank fragment layout -->

    <RadioGroup
            android:id="@+id/radio_group_sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
    >
        <RadioButton android:id="@+id/radio_by_distance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:checked="true"
                     android:text="@string/sort_by_distance"
                     android:layout_weight="1"
        >

        </RadioButton>
        <RadioButton android:id="@+id/radio_by_rating"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/sort_by_rating"
                     android:layout_weight="1"
        />
    </RadioGroup>


    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
        <Button android:id="@+id/button_cancel" android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_weight="1" android:text="@string/cancel"  android:background="@color/colorPrimary" android:layout_margin="2dp"
        />
        <Button android:id="@+id/button_ok" android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_weight="1" android:text="@string/ok" android:background="@color/colorPrimary" android:layout_margin="2dp"/>

    </LinearLayout>
</LinearLayout>