<?xml version="1.0" encoding="utf-8"?>
<!-- HINT: Fragment layout crashes when it uses constraint layout as the main layout (needs to be wrapped into frame layout- why? -->
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                       android:layout_height="match_parent">

        <!-- TODO consider adding autofillHints -->
        <ImageView
                android:layout_width="match_parent"
                android:contentDescription="@string/login_screen_banner"
                android:layout_height="121dp"
                app:srcCompat="@drawable/banner"
                android:id="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>

        <EditText
                android:id="@+id/editText_first_name"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="44dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" />

        <EditText
                android:id="@+id/editText_second_name"
                android:hint="@string/second_name"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/editText_first_name"/>

        <EditText
                android:id="@+id/editText_phone"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/editText_second_name"/>

        <EditText
                android:id="@+id/editText_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/editText_phone"/>


        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:ems="10"
                android:id="@+id/editText_password"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:textColor="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/editText_email"
                android:layout_marginTop="16dp"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/reply_password"
                android:ems="10"
                android:id="@+id/editText_confirm_password"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:textColor="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/editText_password"
                android:layout_marginTop="16dp"/>

        <CheckBox
                android:text="@string/i_accept_the_license_agreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox2" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/editText_confirm_password" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"/>

        <Button
                android:text="@string/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_register"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
        />



    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>

