<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent" android:layout_height="match_parent"
              tools:context=".ui.main.StatsFragment"
              android:orientation="vertical"
              android:padding="10dp"
>

    <LinearLayout
            android:id="@+id/linearLayout_stats_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            tools:visibility="gone"
    >
        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/downloading"
        />
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                  android:orientation="vertical"
    >


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/years_rentals"
                android:textAlignment="center" android:textStyle="bold"/>

        <ImageView
                android:id="@+id/imageView_anchor"
                android:layout_width="match_parent" android:layout_height="250dp"
                android:contentDescription="@string/anchor"
                android:src="@drawable/anchor"
                android:padding="20dp"
                android:visibility="gone"
        />

        <TextView
                android:id="@+id/textView_no_sailing_this_year"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/seems_like_no_sailing"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone"
                android:layout_marginBottom="20dp"
        />

        <com.anychart.AnyChartView
                android:id="@+id/stats_chart"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="20dp"
        />


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/total_number_of_rentals"
                android:textAlignment="center" android:textStyle="bold"/>

        <TextView
                android:id="@+id/textView_rentals_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                tools:text="1"
                android:textAlignment="center" android:textStyle="bold"/>

        <!--TextView
                android:text="@string/rentals_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textAlignment="center" android:textStyle="bold"/-->

    </LinearLayout>

</LinearLayout>