<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.RentDetailsFragment"
        android:padding="16dp">

    <TextView
            android:id="@+id/textView_centre_name_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            tools:text="Centre name"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_margin="10dp"
    />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
    >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equipment"
                android:textSize="20sp"
                android:textAlignment="center"

        />

        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_equipment"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
    >

        <Button
                android:id="@+id/button_choose_date"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:drawableStart="@drawable/ic_date_white"
        />

        <!-- TODO use data binding here - current date -->
        <TextView
                android:id="@+id/textView_choose_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
                tools:text="21.06.2019"
                android:gravity="end"
        />

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
    >

        <Button
                android:id="@+id/button_choose_start_time"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:drawableStart="@drawable/ic_clock_white"
        />

        <TextView
                android:id="@+id/textView_choose_start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
                tools:text="21.06.2019"
                android:gravity="end"
        />

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
    >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_long"
                android:textSize="20sp"
                android:textAlignment="center"

        />

        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_hours"/>

    </LinearLayout>


    <!--
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Planned number of hours"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"

            />

            <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
            />
    -->


    <!-- TODO consider using MapView -->

    <Button
            android:id="@+id/button_maps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_map"
            android:layout_marginBottom="20dp"
            android:background="@color/colorSecondary"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_map_white"
    />

    <Button
            android:id="@+id/button_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_the_centre"
            android:layout_marginBottom="20dp"
            android:background="@color/colorSecondary"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_phone_white"
    />

    <Button
            android:id="@+id/button_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_marginBottom="20dp"
            android:background="@color/colorSuccess"
            android:padding="10dp"
            android:drawableStart="@drawable/ic_check_white"
    />


</LinearLayout>
