<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.RentMasterFragment"
        android:orientation="vertical"
>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:defaultQueryHint="@string/search_hint"
                android:layout_weight="9"/>

        <ImageButton
                android:id="@+id/button_location"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_my_location_white"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:background="@color/colorSecondary"
        />

    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="2dp"
    >

        <Button android:id="@+id/button_filter"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_filter_list_white"
                android:text="@string/filter"
                android:background="@color/colorPrimary"
                android:layout_marginEnd="2dp"
                android:padding="2dp"
        />

        <Button android:id="@+id/button_sort"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sort"
                android:drawableStart="@drawable/ic_sort_list_white"
                android:background="@color/colorPrimary"
                android:layout_marginStart="2dp"
                android:padding="2dp"
        />

    </LinearLayout>




    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_master"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/centre_item"
    >
    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>
